--- a/src/app/features/modal-nueva-operacion/modal-nueva-operacion.component.sass
+++ b/src/app/features/modal-nueva-operacion/modal-nueva-operacion.component.sass
@@ -2,13 +2,13 @@
 .title
     color: $primary
     font-size: 18px
-.increments
+.operations
     width: 100% !important
 .spacing
     margin-bottom: 35%
 .spacing-one
     margin-bottom: 5%
-.button__increments
+.operation__btn
     width: 100%
     text-align: inherit
     position: relative
