--- a/src/app/features/tabla-masivos/tabla-masivos.component.sass
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.sass
@@ -1,9 +1,19 @@
 @import '../../../assets/style-variables/variables'
 
+.filter__form
+    margin: 20px 0 0 20px
+.mat-form-field-outline
+    background-color: #ffffff !important
+.mat__label__search
+    color: $medium-gray
+    display: inline-flex !important
+.search__icon
+    transform: translateY(-3px)
+    font-size: 20px !important
+    margin-right: 2px
 .section__subtable
     background-color: white
-    margin-top: 3vh
-    padding: 30px 30px 30px 
+    padding: 20px 
     overflow: hidden
 table
     width: 100%
