--- a/src/app/pages/home/modules/activos/editar-activo/editar-activo.component.html
+++ b/src/app/pages/home/modules/activos/editar-activo/editar-activo.component.html
@@ -197,7 +197,7 @@
 
 				<mat-dialog-actions>
 					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
-					<button mat-stroked-button class="buttons__stepper__primary" matStepperNext (click)="modificarActivo()">
+					<button mat-stroked-button class="buttons__stepper__primary" matStepperNext (click)="editarActivo()">
 						Confirmar
 					</button>
 				</mat-dialog-actions>
