--- a/src/styles.sass
+++ b/src/styles.sass
@@ -51,6 +51,8 @@ html, body
   color: #00000099 !important
 
 // TABS
+.mat-tab-header
+  border-bottom: none
 .mat-ink-bar
   background-color: $primary !important
 
