--- a/src/app/features/tabla-masivos/tabla-masivos.component.html
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.html
@@ -1,3 +1,12 @@
+<form class="filter__form">
+	<mat-form-field class="search__input" appearance="outline">
+		<mat-label class="mat__label__search">
+			<mat-icon class="search__icon">search</mat-icon>
+			<span>Buscar</span> 
+		</mat-label>
+		<input matInput type="text" placeholder="Buscar" (keyup)="applyFilter($event)">
+	</mat-form-field>
+</form>
 <div class="section__table">
 	<div class="section__subtable">
 		<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
