--- a/src/app/features/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/features/tabla-usuarios/tabla-usuarios.component.html
@@ -1,4 +1,13 @@
 <div class="section__table">
+	<form class="filter__form">
+		<mat-form-field class="search__input" appearance="outline">
+			<mat-label class="mat__label__search">
+				<mat-icon class="search__icon">search</mat-icon>
+				<span>Buscar</span> 
+			</mat-label>
+			<input matInput type="text" placeholder="Buscar" (keyup)="applyFilter($event)">
+		</mat-form-field>
+	</form>
 	<div class="section__subtable">
 		<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 			<!--- Note that these columns can be defined in any order.
@@ -14,7 +23,7 @@
 				<td mat-cell *matCellDef="let element">
 					<span class="text__id" *ngIf="idType===0">{{ element.cuil | cuil }}</span>
 					<span class="text__id" *ngIf="idType===1">{{ element.dni | number }}</span>
-					<span class="text__id" *ngIf="idType===2">{{ (element.userId) ? element.userId.username : element.username }}</span>
+					<span class="text__id" *ngIf="idType===2">{{ element.username }}</span>
 				</td>
 			</ng-container>
 
@@ -34,9 +43,9 @@
 			<ng-container matColumnDef="status">
 				<th mat-header-cell *matHeaderCellDef style="width: 20%; min-width: 155px;">Estado</th>
 				<td mat-cell *matCellDef="let element">
-                    <div *ngIf="element.userId">
-                        <div [class]="element.userId.status"></div>
-                        {{ element.userId.status | status }}
+                    <div>
+                        <div [class]="element.status"></div>
+                        {{ element.status | status }}
                     </div>
 				</td>
 			</ng-container>
@@ -51,12 +60,12 @@
 						<button mat-menu-item (click)="verDetalle(element)">
 							<span>Ver detalle</span>
 						</button>
-						<button mat-menu-item (click)="modificarUsuario(element)">
+						<button mat-menu-item (click)="editarUsuario(element)">
 							<span>Editar</span>
 						</button>
-						<button mat-menu-item (click)="modificarEstado(element)" [disabled]="(!element.userId)">
+						<button mat-menu-item (click)="editarEstado(element)" [disabled]="(!element.userId)">
                             <ng-container *ngIf="element.userId; else elseBlock">
-                                <span *ngIf="element.userId.status === 'ACTIVE'; else elseBlock">Desactivar</span>
+                                <span *ngIf="element.status === 'ACTIVE'; else elseBlock">Desactivar</span>
                                 <ng-template #elseBlock>Activar</ng-template>
                             </ng-container>
                             <ng-template #elseBlock>
