--- a/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
@@ -10,13 +10,14 @@
 		<div class="flex__user__info">
 			<div style="display: flex">
 				<mat-card-subtitle class="highlight__info">Usuario</mat-card-subtitle>
-				<mat-card-subtitle>{{ usuario.userId ? usuario.userId.username : usuario.username  }}</mat-card-subtitle>
+				<mat-card-subtitle>{{ usuario.username }}</mat-card-subtitle>
 			</div>
 			<mat-card-subtitle class="highlight__info" *ngIf="usuario.rol">{{ usuario.rol }}</mat-card-subtitle>
 		</div>
 		<br />
 		<div class="btn_group">
-			<button mat-raised-button class="buttons__management status__btn" *ngIf="usuario.userId" (click)="editarEstado(usuario)"> {{(usuario.userId.status === 'ACTIVE') ? 'Desactivar' : 'Activar' }}</button>
+			<!-- PROVISORIO HASTA AGREGAR STATUS EN ADMIN -->
+			<button mat-raised-button class="buttons__management status__btn" *ngIf="usuario.userId" (click)="editarEstado(usuario)"> {{(usuario.status === 'ACTIVE') ? 'Desactivar' : 'Activar' }}</button>
 			<button mat-stroked-button class="buttons__management" (click)="editarUsuario(usuario.id)">Editar</button>
 		</div>
 	</div>
